kubernetes/apps/home-automation/unraid-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unraid-api
  namespace: home-automation
spec:
  selector:
    app: unraid-api
  type: LoadBalancer
  ports:
  - name: webui
    protocol: TCP
    port: 80
    targetPort: 3005
