kubernetes/apps/home-automation/unraid-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: unraid-api-internal
spec:
  ingressClassName: internal
  rules:
  - host: unraid.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unraid-api
            port:
              number: 3005
